--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Crowd1</string>
     <string name="menuButton">Login</string>
     <string name="registerButton">Register</string>
+    <string name="previousText">Do you want to continue previous game?</string>
 </resources>
