Sort button with autocomplete Tag, tagIterator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="start">START</string>
     <string name="previousGame">Do you want to continue previous game?</string>
     <string name="resume">RESUME</string>
+    <string name="sort">SORT</string>
 </resources>
