--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="highscore">Highscore</string>
     <string name="title_activity_highscore">HighscoreActivity</string>
     <string name="title_activity_shop">ShopActivity</string>
+    <string name="highscoreTitle">HIGHSCORE</string>
 </resources>
