--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="button">Button</string>
     <string name="points">Points:   </string>
     <string name="username">Username:   </string>
+    <string name="avatar">avatar</string>
 </resources>
