displaying user Items and more minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="choose_avatar">CHOOSE AVATAR</string>
     <string name="shop">SHOP</string>
     <string name="buy">BUY</string>
+    <string name="description">Description:</string>
+    <string name="price">Price:</string>
 </resources>
