--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="description">Description:</string>
     <string name="price">Price:</string>
     <string name="shop">SHOP</string>
+    <string name="generate_new_game_key">GENERATE NEW GAME KEY</string>
 </resources>
